Adding Install button

--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf8"/>
 		<meta name="apple-mobile-web-app-capable" content="yes"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-		<!-- css -->
+		<!-- iOS Web App stuff -->
+<!--
+		<meta name="apple-mobile-web-app-capable" content="yes"/>
+		<link rel="apple-touch-icon" href="assets/icons/apple-icon-57.png"/>
+		<link rel="apple-touch-icon" sizes="72x72" href="assets/icons/apple-icon-72.png"/>
+		<link rel="apple-touch-icon" sizes="114x114" href="assets/icons/apple-icon-114.png"/>
+		<link rel="apple-touch-icon" sizes="144x144" href="assets/icons/apple-icon-144.png"/>
+-->
+		<!-- Chrome Web App stuff -->
+<!--		<link rel="chrome-webstore-item" href="https://chrome.google.com/webstore/detail/epkfgponkmhnfmnjdeckalckabbhkkim">-->
+        <!-- css -->
 		<link href="build/enyo.css" rel="stylesheet"/>
 		<link href="build/app.css" rel="stylesheet"/>
 		<!-- js -->
