--- a/debug.html
+++ b/debug.html
@@ -4,6 +4,18 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<title>Subnet Calculator</title>
 		<link rel="shortcut icon" href="assets/favicon.ico"/>
+        
+        		<!-- iOS Web App stuff -->
+<!--
+		<meta name="apple-mobile-web-app-capable" content="yes"/>
+		<link rel="apple-touch-icon" href="assets/icons/apple-icon-57.png"/>
+		<link rel="apple-touch-icon" sizes="72x72" href="assets/icons/apple-icon-72.png"/>
+		<link rel="apple-touch-icon" sizes="114x114" href="assets/icons/apple-icon-114.png"/>
+		<link rel="apple-touch-icon" sizes="144x144" href="assets/icons/apple-icon-144.png"/>
+-->
+		<!-- Chrome Web App stuff -->
+<!--		<link rel="chrome-webstore-item" href="https://chrome.google.com/webstore/detail/epkfgponkmhnfmnjdeckalckabbhkkim">-->
+        
 		<!-- -->
 		<meta http-equiv="Content-Type" content="text/html; charset=utf8"/>
 		<meta name="apple-mobile-web-app-capable" content="yes"/>
